tests/modules/good/ekçternal.catala_en
> Module Ekçternal


```catala-metadata
declaration scope S:
  output o condition
```
