tests/modules/bad/mod_def.catala_en
> Module Mod_def


```catala
declaration enumeration E:
  -- C content integer

declaration scope S:
  context output x content integer
```
